--- a/unidad-1/basico.html
+++ b/unidad-1/basico.html
@@ -61,7 +61,14 @@
             <div>
                 <label for="nombre">Nombre: </label> 
                 <input type="text" id="nombre" placeholder="Type in me!"/>
-                <input type="range">
+            </div>
+            <div>
+                <label for="password">Password: </label>
+                <input type="password" id="password" placeholder="Pasa clave!">
+            </div>
+            <div>
+                <label for="color">Color: </label>
+                <input type="color" id="color" placeholder="">
             </div>
             <div>
                 <label for="correo">Pon tu correo:</label>
