Se agrego la hoja de estilo

--- a/unidad-1/basico.html
+++ b/unidad-1/basico.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Elementos basicos de HTML</title>
+        <link href="estilo.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
     </head>
     <body>
         <h1>Fundamentos de Programación</h1>
@@ -10,21 +12,21 @@
         <p>Esta pagina tiene derechos de autor, queda prohibido el uso inhapropiado de este.</p>
 
         <h2>Tipos de encabzados dentro de HTML</h2>
-        <p>Existen seis diferentes niveles de encabezados y se utilizan con el elemento h, el nivel 1 es el más alto y el 6 es el más bajo</p>
+        <p id="niveles">Existen seis diferentes niveles de encabezados y se utilizan con el elemento h, el nivel 1 es el más alto y el 6 es el más bajo</p>
 
-        <h2>Listas</h2>
+        <h2 class="diferente">Listas</h2>
         <p>Listas Desordenadas</p>
 
         <ul>
             <li>Windows</li>
-            <li>Linux</li>
+            <li class="diferente">Linux</li>
             <li>OSX</li>
         </ul>
 
         <p>Listas Ordenadas</p>
 
         <ol>
-            <li>Python</li>
+            <li class="diferente">Python</li>
             <li>HTML</li>
             <li>Java</li>
         </ol>
