Nuevo ejercicio con condiciones

--- a/unidad-3/tarea-2/calculadora1.html
+++ b/unidad-3/tarea-2/calculadora1.html
@@ -19,7 +19,7 @@
                 </div>
                 <div>
                     <label for="resultado" id="lblResultado"><b>=</b></label>
-                    <input type="number" id="resultado" readonly>
+                    <input type="number" id="resultado" placeholder="Resultado" readonly>
                 </div>
             </div>
             <div id="botones" align="center">
