Nuevo ejercicio con condiciones

--- a/calculadoras/calculadoras.html
+++ b/calculadoras/calculadoras.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1 align="center">Calculadoras</h1>
-        <center><img src="C:/Users/ciril/Pictures/switch.png" alt="switch"></center>
+        <center><img src="https://ubistatic19-a.akamaihd.net/ubicomstatic/es-ES/global/custom-module/switch_331332.png" alt="switch"></center>
         <nav align="center">
             <div id="basico"><a href="../calculadoras/calculadora1/calculadora1.html" target="_blank">Básica</a></div>
             <div id="grados"><a href="../calculadoras/calculadora2/calculadora2.html" target="_blank">°C a °F</a></div>
