Nuevo ejercicio con condiciones

--- a/calculadoras/calculadoras.html
+++ b/calculadoras/calculadoras.html
@@ -16,7 +16,7 @@
             <div id="area"><a href="../calculadoras/calculadora3/calculadora3.html" target="_blank">Área</a></div>
             <div id="velocidad"><a href="../calculadoras/calculadora4/calculadora4.html" target="_blank">Velocidad</a></div>
             <div id="incremento"><a href="../calculadoras/calculadora5/calculadora5.html" target="_blank">+/-</a></div>
-            <div id="otra"><a href="../unidad-3/ejemplo-3/ejercicio3.html" target="_blank">Otra</a></div>
+            <div id="otra"><a href="../unidad-3/ejemplo-3/ejercicio3.html" target="_blank">Otras</a></div>
         </nav>
     </body>
     <script src="calculadoras.js"></script>
