--- a/unidad-3/ejemplo-3/ejercicio3.html
+++ b/unidad-3/ejemplo-3/ejercicio3.html
@@ -21,7 +21,7 @@
                     <option value="" selected>-Selecciona una opción-</option>
                     <option value="mitad">Calcular la mitad</option>
                     <option value="cuadrado">Elevar al cuadrado</option>
-                    <option value="par">Es par</option>
+                    <option value="par">¿Es par?</option>
                 </select>
             </div>
             <p id="resultado"></p>
