Nuevos ejercicios do-while

--- a/ejemplos-ciclos/ejemplo-for/ejemplo-for.html
+++ b/ejemplos-ciclos/ejemplo-for/ejemplo-for.html
@@ -26,9 +26,15 @@
                 <button type="button" id="btnCuatro">Ejemplo 4</button>
             </div>
             <div>
+                <button type="button" id="btnCinco">Ejemplo 5</button>
+            </div>
+            <div>
                 <select id="opciones">
                     <option value="opcion0">Seleccione una opción</option>
                 </select>
+            </div>
+            <div>
+                <canvas id="lienzo" width="500" height="500"></canvas>
             </div>
         </form>
         <table id="resultado"></table>
